--- a/backend/package.json
+++ b/backend/package.json
@@ -20,31 +20,40 @@
     "run-prettier": "prettier src/*.ts",
     "validate-prettiness": "yarn run-prettier -c",
     "make-prettier": "yarn run-prettier --write",
-    "eslint": "eslint \"src/*.ts\" \"src/*/*.ts\""
+    "eslint": "eslint \"src/*.ts\" \"src/*/*.ts\"",
+    "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "@types/jest": "^29.5.14",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "morgan": "^1.10.0",
-    "ts-node": "^10.9.2"
+    "multer": "1.4.5-lts.1",
+    "pinata": "^1.8.0",
+    "ts-node": "^10.9.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@stylistic/eslint-plugin-ts": "^2.10.0",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.8.4",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
   }
