--- a/backend/package.json
+++ b/backend/package.json
@@ -31,14 +31,17 @@
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
     "@types/jest": "^29.5.14",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
+    "p-queue": "v6",
     "pinata": "^1.8.0",
     "ts-node": "^10.9.2",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
