--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -1,6 +1,9 @@
 on:
     pull_request:
         types: [opened, reopened, ready_for_review]
+    push:
+        branches:
+            - ci-pr-review
     issue_comment:
         types: [created]
 
