--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -1,9 +1,6 @@
 on:
     pull_request:
         types: [opened, reopened, ready_for_review]
-    push:
-        branches:
-            - ci-pr-review
     issue_comment:
         types: [created]
 
@@ -21,10 +18,8 @@ jobs:
           id: pragent
           uses: Codium-ai/pr-agent@main
           env:
-            OPENAI.KEY: ${{ secrets.OPENAI_KEY }}
-            OPENAI.API_BASE: https://api.sambanova.ai
-            CONFIG.MODEL: "openai/Meta-Llama-3.2-3B-Instruct"
-            CONFIG.MODEL_TURBO: "openai/Meta-Llama-3.1-70B-Instruct"
+            CONFIG.MODEL: sambanova/Meta-Llama-3.1-8B-Instruct"
+            CONFIG.MODEL_TURBO: "sambanova/Meta-Llama-3.2-3B-Instruct"
             CONFIG.CUSTOM_MODEL_MAX_TOKENS: 64000
+            SAMBANOVA_API_KEY: ${{ secrets.SAMBANOVA_API_KEY }}
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            litellm.set_verbose: true
