feat: add mobile push notification system

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,8 @@
 PINATA_JWT=
-PINATA_GATEWAY_URL=
+PINATA_GATEWAY=
 OLLAMA_ENDPOINT_URL=
 PINATA_PUBLIC_GROUP_ID=
 SAMBA_NOVA_API_KEY=
+NTFY_URL=
+NTFY_TOKEN=
+NTFY_TOPIC_NAME=
