--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -28,3 +28,4 @@ jobs:
         with:
           push: true
           tags: ghcr.io/${{ github.repository }}:latest
+          context: backend/Dockerfile
