--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
@@ -35,6 +37,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-lazyload": "^3.2.3",
     "@vitejs/plugin-react": "^4.3.3",
     "@vitest/coverage-v8": "2.1.4",
     "autoprefixer": "^10.4.20",
